Use List.of() instead of Collections.emptyList()
- It's modern java
- It's shorter to type
- Likely has better performance since it's Stable-annotated List impl